# hdbpp-timescale-project

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: Fetch-hdbpp-cm.cmake.in  Fetch-hdbpp-es.cmake.in  Fetch-libhdbpp.cmake.in
components/hdbpp-health-check/: .clang-tidy  CMakeLists.txt  README.md
components/hdbpp-health-check/src/: CMakeLists.txt  ClassFactory.cpp  HdbppHealthCheck.cpp  HdbppHealthCheck.h  HdbppHealthCheck.xmi  HdbppHealthCheckClass.cpp  HdbppHealthCheckClass.h  HdbppHealthCheckStateMachine.cpp  HealthCheck.cpp  HealthCheck.h  main.cpp
device-servers/hdbpp-health-check/src/: HdbppHealthCheck.cpp  HdbppHealthCheck.h  HdbppHealthCheck.xmi  HdbppHealthCheckClass.cpp  HealthCheck.cpp  HealthCheck.h
doc/: README.md  build.md  db-schema-config.md  deployment.md  testing-resources.md
resources/cassandra-import/: README.md  hdbpp_compare.py  hdbpp_import.py
resources/cassandra-import/conf/: hdbpp_compare.conf  hdbpp_import.conf
resources/hdbpp-timescale-docker/: Dockerfile  Makefile  README.md
resources/hdbpp-timescale-docker/resources/: init-hdbpp-db.sh
resources/schema/: hdb_ext_aggregates.sql  hdb_ext_arrays_aggregates.sql  hdb_ext_arrays_aggregates_helper.sql  hdb_ext_compress_policy.sql  hdb_ext_import.sql  hdb_ext_postprocessing.sql  hdb_ext_reorder_policy.sql  hdb_ext_ttl_stats.sql  hdb_ext_users.sql  hdb_roles.sql  hdb_schema.sql
resources/test-scripts/: create-test-database.py  test-database.py
services/hdbpp-barman-reporting/: README.md  hdbpp_barman.py  hdbpp_rest_report.py
services/hdbpp-barman-reporting/setup/: hdbpp_barman.conf
services/hdbpp-cluster-reporting/: README.md  requirements.txt  run_server.py
services/hdbpp-cluster-reporting/docker/: Dockerfile  Makefile
services/hdbpp-cluster-reporting/server/: __init__.py  app.py  config.py  errors.py  models.py  services.py
services/hdbpp-cluster-reporting/server/routes/: __init__.py  aggregates.py  attributes.py  backup.py  database.py  servers.py  status.py  ttl.py
services/hdbpp-cluster-reporting/setup/: hdbpp_cluster_reporting.conf
services/hdbpp-postprocessing/: README.md  hdbpp_postprocessing.py
services/hdbpp-postprocessing/docker/: Dockerfile  Makefile
services/hdbpp-postprocessing/setup/: hdbpp_postprocessing  hdbpp_postprocessing.conf  hdbpp_postprocessing_docker
services/hdbpp-reorder-chunks/: README.md  hdbpp_reorder_chunks.py
services/hdbpp-reorder-chunks/docker/: Dockerfile  Makefile
services/hdbpp-reorder-chunks/setup/: chunks.conf  hdbpp_reorder_chunks  hdbpp_reorder_chunks.conf  hdbpp_reorder_chunks_docker
services/hdbpp-ttl/: README.md  hdbpp_rest_report.py  hdbpp_ttl.py  requirements.txt
services/hdbpp-ttl/docker/: Dockerfile  Makefile
services/hdbpp-ttl/setup/: hdbpp_ttl  hdbpp_ttl.conf  hdbpp_ttl_docker
